rocket_codegen/tests/ui-fail-stable/catch_type_errors.stderr
error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
 --> tests/ui-fail-stable/catch_type_errors.rs:6:30
  |
5 | #[catch(404)]
  | ------------- required by a bound introduced by this call
6 | fn f1(_request: &Request) -> usize {
  |                              ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Responder<'r, 'o>`:
            <Box<str> as Responder<'r, 'static>>
            <Box<[u8]> as Responder<'r, 'static>>
            <Box<T> as Responder<'r, 'o>>
            <rocket::Either<T, E> as Responder<'r, 'o>>
            <Cow<'o, R> as Responder<'r, 'o>>
            <rocket::tokio::fs::File as Responder<'r, 'static>>
            <EventStream<S> as Responder<'r, 'r>>
            <rocket::serde::json::Value as Responder<'r, 'static>>
          and $N others

error[E0277]: the trait bound `bool: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-stable/catch_type_errors.rs:11:30
   |
10 | #[catch(404)]
   | ------------- required by a bound introduced by this call
11 | fn f2(_request: &Request) -> bool {
   |                              ^^^^ the trait `Responder<'_, '_>` is not implemented for `bool`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <Box<str> as Responder<'r, 'static>>
             <Box<[u8]> as Responder<'r, 'static>>
             <Box<T> as Responder<'r, 'o>>
             <rocket::Either<T, E> as Responder<'r, 'o>>
             <Cow<'o, R> as Responder<'r, 'o>>
             <rocket::tokio::fs::File as Responder<'r, 'static>>
             <EventStream<S> as Responder<'r, 'r>>
             <rocket::serde::json::Value as Responder<'r, 'static>>
           and $N others

error[E0308]: mismatched types
  --> tests/ui-fail-stable/catch_type_errors.rs:16:17
   |
16 | fn f3(_request: bool) -> usize {
   |    --           ^^^^ expected `bool`, found `&Request<'_>`
   |    |
   |    arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui-fail-stable/catch_type_errors.rs:16:4
   |
16 | fn f3(_request: bool) -> usize {
   |    ^^ --------------

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-stable/catch_type_errors.rs:16:26
   |
15 | #[catch(404)]
   | ------------- required by a bound introduced by this call
16 | fn f3(_request: bool) -> usize {
   |                          ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <Box<str> as Responder<'r, 'static>>
             <Box<[u8]> as Responder<'r, 'static>>
             <Box<T> as Responder<'r, 'o>>
             <rocket::Either<T, E> as Responder<'r, 'o>>
             <Cow<'o, R> as Responder<'r, 'o>>
             <rocket::tokio::fs::File as Responder<'r, 'static>>
             <EventStream<S> as Responder<'r, 'r>>
             <rocket::serde::json::Value as Responder<'r, 'static>>
           and $N others

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-stable/catch_type_errors.rs:21:12
   |
20 | #[catch(404)]
   | ------------- required by a bound introduced by this call
21 | fn f4() -> usize {
   |            ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <Box<str> as Responder<'r, 'static>>
             <Box<[u8]> as Responder<'r, 'static>>
             <Box<T> as Responder<'r, 'o>>
             <rocket::Either<T, E> as Responder<'r, 'o>>
             <Cow<'o, R> as Responder<'r, 'o>>
             <rocket::tokio::fs::File as Responder<'r, 'static>>
             <EventStream<S> as Responder<'r, 'r>>
             <rocket::serde::json::Value as Responder<'r, 'static>>
           and $N others
